k8s/http_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
  namespace: http-server
  labels:
    app: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: http-server
        image: tonylixu/go_http_server:v1.9
        volumeMounts:
        - mountPath: /logs
          name: log-volume
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/live
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          # One minute startup finish
          failureThreshold: 6
          periodSeconds: 10
      volumes:
      - name: log-volume
        emptyDir: {}
