k8s/http_server_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-server
  labels:
    apps: http-server
spec:
  containers:
    - name: http-server
      image: tonylixu/go_http_server:v1.10
      ports:
      - name: liveness-port
        containerPort: 8080
        hostPort: 8080
      readinessProbe:
        httpGet:
          path: /healthz
          port: liveness-port
        initialDelaySeconds: 3
        periodSeconds: 3
      livenessProbe:
        httpGet:
          path: /healthz
          port: liveness-port
        initialDelaySeconds: 10
        periodSeconds: 3
      startupProbe:
        httpGet:
          path: /healthz
          port: liveness-port
        # One minute startup finish
        failureThreshold: 6
        periodSeconds: 10
