k8s/http_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
  namespace: http-server
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort:8080
